Added gaug.es tracking code

--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
 
 <body>
 	<h1>Under Construction</h1>
+
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '506a36c7613f5d3f3b000055');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
+
 </body>
 </html>
